--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,3 @@
-## 2017.12.09  Version 1.0
+## 2018.02.12  Version 1.0
 
-- [x] Support twitter card.
-- [x] Remove name in `.Site.Params`. It's duplicate with `.Site.title`.
-- [x] Add `author` in `.Site.Params`.
+- [x] for my code blog , named xiao
